--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- James' code -->
 <html>
   <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css">
