--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </head>
   <body>
     <div class="movie-layer">
-      <video class="movie js-movie" controls>
+      <video class="movie js-movie" controls autoplay>
         <source class="js-movie-src" src="https://s3.amazonaws.com/fnwell-misc/SantAgata-de-Goti-Virtual-Treadmill-Walk.mp4" type="video/mp4">
         <!-- <source class="js-movie-src" src="https://media.w3.org/2010/05/sintel/trailer.mp4" type="video/mp4"> -->
       </video>
